# AirMG

./: .gitignore  ATTRIBUTION.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md
.github/workflows/: deploy-demo.yml
backend/: .gitignore  README.md  pyproject.toml
backend/src/airmg/: __init__.py  config.py  main.py
backend/src/airmg/analytics/: baselines.py  behaviors.py  comparison.py  correlation.py  health_age.py  pipeline.py  readiness.py  recovery.py  sleep_score.py  strain.py  zones.py
backend/src/airmg/auth/: oauth.py  tokens.py
backend/src/airmg/coach/: engine.py
backend/src/airmg/journal/: catalog.py
backend/src/airmg/routes/: auth.py  baselines_route.py  coach.py  dashboard.py  explorer.py  export.py  health_age.py  insights.py  journal.py  readiness.py  recovery.py  settings.py  sleep.py  strain.py  sync.py  trends.py  workouts.py
backend/src/airmg/store/: db.py  reads.py  schema.sql  writes.py
backend/src/airmg/sync/: client.py  mapper.py
backend/tests/: test_baselines.py  test_behaviors.py  test_coach.py  test_comparison.py  test_correlation.py  test_db.py  test_health_age.py  test_pipeline.py  test_readiness_engine.py  test_recovery.py  test_routes_smoke.py  test_store.py  test_strain.py  test_sync.py  test_zones.py
docs/: ARCHITECTURE.md  SETUP.md
docs/mockups/: bento.html  hacf-viz-gallery.html  hero-alive.html  hero-alive2.html  hero-data-city-v2.html  hero-data-city.html
docs/superpowers/plans/: 2026-06-11-airmg-implementation.md  2026-06-11-noop-parity-plan.md  2026-06-12-orbital-theme.md  (+3 more)
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/public/: theme-mockup.html
frontend/src/: App.tsx  index.css  main.tsx
(+107 files in other folders)
